[package]
name = "targets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.9"
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
rand = "0.8.5"
sqlite="0.26.0"
actix-web = "4"